k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orbit-deployment
  labels:
    app: orbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orbit
      component: web
  template:
    metadata:
      labels:
        app: orbit
        component: web
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: server
        image: ghcr.io/dsschult/orb-it:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 65534
