k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orbit-service
spec:
  selector:
    app: orbit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
