k8s/mongo_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orbit-mongo-service
spec:
  selector:
    app: orbit
    component: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
