k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orbit-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: orb-it.dsschult.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orbit-service
            port:
              number: 80
  tls:
  - hosts:
    - orb-it.dsschult.com
    secretName: orbit-ingress-cert
